updated animations guard and vampire. Platforms now okay to jump on.

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,11 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+Assets/Scene1_BACKUP_7988.unity
+Assets/Scene1_BACKUP_7988.unity.meta
+Assets/Scene1_BASE_7988.unity
+Assets/Scene1_BASE_7988.unity.meta
+Assets/Scene1_LOCAL_7988.unity
+Assets/Scene1_LOCAL_7988.unity.meta
+Assets/Scene1_REMOTE_7988.unity
+Assets/Scene1_REMOTE_7988.unity.meta
